[package]
name = "parser-test"
version = "0.3.2"
edition = "2021"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
license = "MIT"
description = "Declarative tester for parsers"
repository = "https://github.com/romixlab/parser-test"
keywords = ["pest", "parser", "grammar", "lexer"]
categories = ["parsing"]

[dependencies]
